adding login node

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,6 +78,13 @@
         <img class="u-image u-image-circle u-image-2" src="images/45ec38726ce717479607de8ee08852fd120e2b1ed37f513a154b3d6a6b6fbd1bf9e832061ed9a0e10d0e0e738646dd041b0785dc668051a71bf074_1280.jpg" alt="" data-image-width="1280" data-image-height="853" data-href="Accueil.html">
       </div></header> 
     <section class="u-align-center u-clearfix u-image u-shading u-section-1" id="carousel_5ad0" src="" data-image-width="1782" data-image-height="1080">
+      <!-- test  -->
+      <h1>Hi <%= name %></h1>
+      <form action="/logout?_method=DELETE" method="POST">
+        <button type="submit">Log Out</button>
+      </form>
+      <!-- end test  -->
+      
       <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <h1 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-title u-text-1"> Join Fipa Cloud for more secured cloud workspace</h1>
         <a href="Accueil.html#carousel_082c" class="u-active-white u-border-2 u-border-white u-btn u-button-style u-hover-white u-none u-text-active-black u-text-body-alt-color u-text-hover-black u-btn-1">Learn more</a>
