--- a/views/Contact.html
+++ b/views/Contact.html
@@ -26,7 +26,7 @@
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="fr"><header class="u-align-center-sm u-align-center-xs u-black u-clearfix u-header u-header" id="sec-a184"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
-        <a href="Accueil.html" class="u-image u-logo u-image-1" data-image-width="256" data-image-height="256" title="Accueil">
+        <a href="index.ejs" class="u-image u-logo u-image-1" data-image-width="256" data-image-height="256" title="Accueil">
           <img src="images/eagle.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-align-left u-menu u-menu-hamburger u-offcanvas u-menu-1">
@@ -38,7 +38,7 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-spacing-2 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-light-3 u-text-hover-palette-1-light-2 u-text-palette-1-light-3" href="Accueil.html" style="padding: 10px 20px;">Accueil</a>
+            <ul class="u-nav u-spacing-2 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-light-3 u-text-hover-palette-1-light-2 u-text-palette-1-light-3" href="index.ejs" style="padding: 10px 20px;">Accueil</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-light-3 u-text-hover-palette-1-light-2 u-text-palette-1-light-3" href="Services.html" style="padding: 10px 20px;">Services</a>
 <!-- </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-light-3 u-text-hover-palette-1-light-2 u-text-palette-1-light-3" href="MyCloud.html" style="padding: 10px 20px;">MyCloud</a> -->
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-light-3 u-text-hover-palette-1-light-2 u-text-palette-1-light-3" href="About.html" style="padding: 10px 20px;">About</a>
@@ -55,7 +55,7 @@
             <div class="u-align-center u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Accueil.html">Accueil</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.ejs">Accueil</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Services.html">Services</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="MyCloud.html">MyCloud</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html">About</a>
@@ -72,7 +72,7 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <img class="u-image u-image-circle u-image-2" src="images/45ec38726ce717479607de8ee08852fd120e2b1ed37f513a154b3d6a6b6fbd1bf9e832061ed9a0e10d0e0e738646dd041b0785dc668051a71bf074_1280.jpg" alt="" data-image-width="1280" data-image-height="853" data-href="Accueil.html">
+        <img class="u-image u-image-circle u-image-2" src="images/45ec38726ce717479607de8ee08852fd120e2b1ed37f513a154b3d6a6b6fbd1bf9e832061ed9a0e10d0e0e738646dd041b0785dc668051a71bf074_1280.jpg" alt="" data-image-width="1280" data-image-height="853" data-href="index.ejs">
       </div></header> 
     <section class="u-align-center u-black u-clearfix u-section-1" id="sec-5ed6">
       <div class="u-clearfix u-sheet u-sheet-1">
