--- a/views/About.ejs
+++ b/views/About.ejs
@@ -1,31 +1,9 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;" lang="fr">
-   <head>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta charset="utf-8">
-      <meta name="keywords" content="01, 02, 03, 04">
-      <meta name="description" content="">
-      <title>About</title>
-      <link rel="stylesheet" href="nicepage.css" media="screen">
-      <link rel="stylesheet" href="About.css" media="screen">
-      <script class="u-script" type="text/javascript" src="jquery-1.9.1.min.js" defer=""></script>
-      <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
-      <meta name="generator" content="Nicepage 6.7.6, nicepage.com">
-      <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
-      <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
-      <script type="application/ld+json">{
-         "@context": "http://schema.org",
-         "@type": "Organization",
-         "name": "cloud",
-         "logo": "images/eagle.png"
-         }
-      </script>
-      <meta name="theme-color" content="#232b79">
-      <meta property="og:title" content="About">
-      <meta property="og:type" content="website">
-      <meta data-intl-tel-input-cdn-path="intlTelInput/">
-   </head>
-   <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="fr">
+      <!-- head  -->
+      <% include partials/head.ejs %>
+      <!-- end head  -->
+
 
       <!-- header  -->
       <% include partials/header.ejs %>
