--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -47,9 +47,9 @@
                    <a class="u-button-style u-nav-link u-text-active-palette-1-light-3 u-text-hover-palette-1-light-2 u-text-palette-1-light-3" style="padding: 10px 20px;">Login</a>
                    <div class="u-nav-popup">
                       <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-2">
-                         <li class="u-nav-item"><a class="u-button-style u-custom-color-9 u-hover-custom-color-5 u-nav-link u-text-hover-palette-1-light-2">UserName</a></li>
-                         <li class="u-nav-item"><a class="u-button-style u-custom-color-9 u-hover-custom-color-5 u-nav-link u-text-hover-palette-1-light-2">Login</a></li>
-                         <li class="u-nav-item"><a class="u-button-style u-custom-color-9 u-hover-custom-color-5 u-nav-link u-text-hover-palette-1-light-2">SignUP</a></li>
+                         <li class="u-nav-item"><a class="u-button-style u-custom-color-9 u-hover-custom-color-5 u-nav-link u-text-hover-palette-1-light-2" href="/profile" >UserName</a></li>
+                         <li class="u-nav-item"><a class="u-button-style u-custom-color-9 u-hover-custom-color-5 u-nav-link u-text-hover-palette-1-light-2" href="/login" >Login</a></li>
+                         <li class="u-nav-item"><a class="u-button-style u-custom-color-9 u-hover-custom-color-5 u-nav-link u-text-hover-palette-1-light-2" href="/register" >SignUP</a></li>
                       </ul>
                    </div>
                 </li>
