--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -49,6 +49,9 @@
                       <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-2">
                           <form action="/logout?_method=DELETE" method="POST">
                            <li class="u-nav-item">
+                              <a class="u-button-style u-custom-color-9 u-hover-custom-color-5 u-nav-link u-text-hover-palette-1-light-2" href="/profile" > <%= name %> </a>
+                           </li>
+                           <li class="u-nav-item">
                               <a class="u-button-style u-custom-color-9 u-hover-custom-color-5 u-nav-link u-text-hover-palette-1-light-2" href="/login" >Login</a>
                            </li>
                            <li class="u-nav-item">
