--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,16 +1,49 @@
-<h1>Login</h1>
-<% if (messages.error) { %>
-  <%= messages.error %>
-<% } %>
-<form action="/login" method="POST">
-  <div>
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" required>
-  </div>
-  <div>
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password" required>
-  </div>
-  <button type="submit">Login</button>
-</form>
-<a href="/register">Register</a>
+<!DOCTYPE html>
+<html style="font-size: 16px;" lang="fr">
+      <!-- head  -->
+      <% include partials/head.ejs %>
+      <!-- end head  -->
+      
+      <!-- header  -->
+      <% include partials/header.ejs %>
+      <!-- end header  -->
+
+
+      <section class="u-align-center u-black u-clearfix u-section-1" id="sec-5ed6">
+         <div class="u-clearfix u-sheet u-sheet-1">
+            <h2 class="u-text u-text-default u-text-1">Login</h2>
+            <div class="u-form u-form-1">
+
+
+              <h6 class="u-text u-text-default u-text-1">
+                <% if (messages.error) { %>
+                  <%= messages.error %>
+                <% } %>
+              </h2>
+              
+              <form action="/login" method="POST"  class="spaced-form">
+
+                <div class="u-form-group u-form-name u-label-none">
+                     <label for="email" class="u-label">Email</label>
+                     <input type="email" id="email" name="email" required  placeholder="Enter a valid email address"   class="u-input u-input-rectangle u-palette-5-dark-3" >
+                  </div>
+                  <div class="u-form-email u-form-group u-label-none">
+                     <label for="password" class="u-label">Password</label>
+                     <input type="password" id="password" name="password" required  placeholder="Enter your password"   class="u-input u-input-rectangle u-palette-5-dark-3" >
+                  </div>
+                  <div class="u-align-center u-form-group u-form-submit u-label-none">
+                     <a href="#" class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-palette-1-dark-1 u-radius u-text-active-palette-1-dark-1 u-btn-1">Login</a>
+                     <input type="submit" value="submit" class="u-form-control-hidden">
+                  </div>
+
+              </form>
+                  
+
+            </div>
+         </div>
+      </section>
+            <!-- footer  -->
+            <% include partials/footer.ejs %>
+            <!-- end footer  -->
+   </body>
+</html>
