--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -35,13 +35,13 @@
           </div>
           <div class="u-custom-menu u-nav-container">
              <ul class="u-nav u-spacing-2 u-unstyled u-nav-1">
-                <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-light-3 u-text-hover-palette-1-light-2 u-text-palette-1-light-3" href="/home" style="padding: 10px 20px;">Accueil</a></li>
+                <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-light-3 u-text-hover-palette-1-light-2 u-text-palette-1-light-3" href="/home" style="padding: 10px 20px;">Home</a></li>
                 <li class="u-nav-item">
                    <a class="u-button-style u-nav-link u-text-active-palette-1-light-3 u-text-hover-palette-1-light-2 u-text-palette-1-light-3" href="/services" style="padding: 10px 20px;">Services</a>
                    <!-- </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-light-3 u-text-hover-palette-1-light-2 u-text-palette-1-light-3" href="/mycloud" style="padding: 10px 20px;">MyCloud</a> -->
                 </li>
                 <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-light-3 u-text-hover-palette-1-light-2 u-text-palette-1-light-3" href="/about" style="padding: 10px 20px;">About</a></li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-light-3 u-text-hover-palette-1-light-2 u-text-palette-1-light-3" href="/team" style="padding: 10px 20px;">Equipes</a></li>
+                <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-light-3 u-text-hover-palette-1-light-2 u-text-palette-1-light-3" href="/team" style="padding: 10px 20px;">Team</a></li>
                 <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-light-3 u-text-hover-palette-1-light-2 u-text-palette-1-light-3" href="/contact" style="padding: 10px 20px;">Contact</a></li>
                 <li class="u-nav-item">
                    <a class="u-button-style u-nav-link u-text-active-palette-1-light-3 u-text-hover-palette-1-light-2 u-text-palette-1-light-3" style="padding: 10px 20px;">Login</a>
