adding init services

--- a/views/Services.ejs
+++ b/views/Services.ejs
@@ -16,7 +16,7 @@
                   <div class="u-layout-col">
                      <div class="u-size-30">
                         <div class="u-layout-row">
-                           <div class="u-container-style u-layout-cell u-opacity u-opacity-0 u-palette-1-base u-radius u-shape-round u-size-20 u-layout-cell-1" data-href="/login" data-target="_blank">
+                           <div class="u-container-style u-layout-cell u-opacity u-opacity-0 u-palette-1-base u-radius u-shape-round u-size-20 u-layout-cell-1" data-href="http://localhost:3000/" data-target="_blank">
                               <div class="u-border-1 u-border-palette-5-dark-3 u-container-layout u-container-layout-1">
                                  <img class="u-image u-image-default u-preserve-proportions u-image-1" src="https://achermyanin.gallerycdn.vsassets.io/extensions/achermyanin/credentials-viewer/0.0.3/1609867022004/Microsoft.VisualStudio.Services.Icons.Default" alt="" data-image-width="1200" data-image-height="1200">
                                  <p class="u-align-center u-text u-text-1">Visual Studio Code<br>
@@ -30,7 +30,7 @@
                                  </p>
                               </div>
                            </div>
-                           <div class="u-container-style u-layout-cell u-opacity u-opacity-10 u-palette-1-base u-radius u-shape-round u-size-20 u-layout-cell-3" data-href="0000.matermost.com" data-target="_blank">
+                           <div class="u-container-style u-layout-cell u-opacity u-opacity-10 u-palette-1-base u-radius u-shape-round u-size-20 u-layout-cell-3" data-href="http://localhost:8065/" data-target="_blank">
                               <div class="u-border-1 u-border-palette-5-dark-3 u-container-layout u-container-layout-3">
                                  <img class="u-image u-image-default u-preserve-proportions u-image-3" src="images/mattermost.png" alt="" data-image-width="300" data-image-height="299">
                                  <p class="u-align-center u-text u-text-3">Mattermost<br>
@@ -41,21 +41,21 @@
                      </div>
                      <div class="u-size-30">
                         <div class="u-layout-row">
-                           <div class="u-container-style u-layout-cell u-opacity u-opacity-10 u-palette-1-base u-radius u-shape-round u-size-20 u-layout-cell-4" data-href="0000.focalboard.com" data-target="_blank">
+                           <div class="u-container-style u-layout-cell u-opacity u-opacity-10 u-palette-1-base u-radius u-shape-round u-size-20 u-layout-cell-4" data-href="http://localhost/login" data-target="_blank">
                               <div class="u-border-1 u-border-palette-5-dark-3 u-container-layout u-container-layout-4">
                                  <img class="u-image u-image-default u-preserve-proportions u-image-4" src="images/focal.png" alt="" data-image-width="1024" data-image-height="1024">
                                  <p class="u-align-center u-text u-text-4">FocalBoard<br>
                                  </p>
                               </div>
                            </div>
-                           <div class="u-container-style u-layout-cell u-opacity u-opacity-10 u-palette-1-base u-radius u-shape-round u-size-20 u-layout-cell-5" data-href="Filecloud.com" data-target="_blank">
+                           <div class="u-container-style u-layout-cell u-opacity u-opacity-10 u-palette-1-base u-radius u-shape-round u-size-20 u-layout-cell-5" data-href="http://localhost:8080" data-target="_blank">
                               <div class="u-border-1 u-border-palette-5-dark-3 u-container-layout u-container-layout-5">
                                  <img class="u-image u-image-default u-preserve-proportions u-image-5" src="images/cloud.png" alt="" data-image-width="512" data-image-height="512">
                                  <p class="u-align-center u-text u-text-5">FileCloud<br>
                                  </p>
                               </div>
                            </div>
-                           <div class="u-container-style u-layout-cell u-opacity u-opacity-10 u-palette-1-base u-radius u-shape-round u-size-20 u-layout-cell-6" data-href="0000.jupyterlab.com" data-target="_blank">
+                           <div class="u-container-style u-layout-cell u-opacity u-opacity-10 u-palette-1-base u-radius u-shape-round u-size-20 u-layout-cell-6" data-href="http://localhost:10000/" data-target="_blank">
                               <div class="u-border-1 u-border-palette-5-dark-3 u-container-layout u-container-layout-6">
                                  <img class="u-image u-image-default u-preserve-proportions u-image-6" src="images/jupyter.png" alt="" data-image-width="883" data-image-height="1023">
                                  <p class="u-align-center u-text u-text-6">JupyterLab<br>
