--- a/app/views/Services.ejs
+++ b/app/views/Services.ejs
@@ -16,14 +16,14 @@
                   <div class="u-layout-col">
                      <div class="u-size-30">
                         <div class="u-layout-row">
-                           <div class="u-container-style u-layout-cell u-opacity u-opacity-0 u-palette-1-base u-radius u-shape-round u-size-20 u-layout-cell-1" data-href="<%=ip_vscode%>" data-target="_blank">
+                           <div class="u-container-style u-layout-cell u-opacity u-opacity-0 u-palette-1-base u-radius u-shape-round u-size-20 u-layout-cell-1" data-href="/vscode" data-target="_blank">
                               <div class="u-border-1 u-border-palette-5-dark-3 u-container-layout u-container-layout-1">
                                  <img class="u-image u-image-default u-preserve-proportions u-image-1" src="https://achermyanin.gallerycdn.vsassets.io/extensions/achermyanin/credentials-viewer/0.0.3/1609867022004/Microsoft.VisualStudio.Services.Icons.Default" alt="" data-image-width="1200" data-image-height="1200">
                                  <p class="u-align-center u-text u-text-1">Visual Studio Code<br>
                                  </p>
                               </div>
                            </div>
-                           <div class="u-container-style u-layout-cell u-opacity u-opacity-10 u-palette-1-base u-radius u-shape-round u-size-20 u-layout-cell-2" data-href="0000.gitlab.com" data-target="_blank">
+                           <div class="u-container-style u-layout-cell u-opacity u-opacity-10 u-palette-1-base u-radius u-shape-round u-size-20 u-layout-cell-2" data-href="/gitlab" data-target="_blank">
                               <div class="u-border-1 u-border-palette-5-dark-3 u-container-layout u-container-layout-2">
                                  <img class="u-image u-image-default u-preserve-proportions u-image-2" src="images/gitlab.png" alt="" data-image-width="512" data-image-height="512">
                                  <p class="u-align-center u-text u-text-2">GitLab<br>
