Added profile page redirection

--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -94,6 +94,6 @@
              <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
        </nav>
-       <img class="u-image u-image-circle u-image-2" src="images/45ec38726ce717479607de8ee08852fd120e2b1ed37f513a154b3d6a6b6fbd1bf9e832061ed9a0e10d0e0e738646dd041b0785dc668051a71bf074_1280.jpg" alt="" data-image-width="1280" data-image-height="853" data-href="/home">
+       <img class="u-image u-image-circle u-image-2" src="images/45ec38726ce717479607de8ee08852fd120e2b1ed37f513a154b3d6a6b6fbd1bf9e832061ed9a0e10d0e0e738646dd041b0785dc668051a71bf074_1280.jpg" alt="" data-image-width="1280" data-image-height="853" data-href="/Profile">
     </div>
  </header>
