--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -1,5 +1,10 @@
-<footer class="u-align-center u-black u-clearfix u-footer u-footer" id="sec-b796">
-    <div class="u-clearfix u-sheet u-sheet-1">
-       <p class="u-small-text u-text u-text-variant u-text-1"> © 2024 FipaCloud - Tous droits réservés</p>
+<!-- footer section -->
+<footer class="footer_section">
+    <div class="container">
+      <p>
+        &copy; <span id="displayYear"></span> All Rights Reserved By
+        <a href="https://html.design/">Free Html Templates</a>
+      </p>
     </div>
- </footer>
+</footer>
+<!-- footer section -->
