--- a/app/views/service.ejs
+++ b/app/views/service.ejs
@@ -40,36 +40,144 @@
     <!-- end header section -->
   </div>
 
-  <!-- about section -->
+  <!-- service section -->
 
-  <section class="about_section layout_padding">
-    <div class="container  ">
+  <section class="service_section layout_padding">
+    <div class="container">
+      <div class="heading_container heading_center">
+        <h2>
+          Our Services
+        </h2>
+      </div>
+    </div>
+    <div class="container ">
       <div class="row">
-        <div class="col-md-6">
-          <div class="detail-box">
-            <div class="heading_container">
-              <h2>
-                About Us
-              </h2>
+        <div class="col-md-6 col-lg-4">
+          <div class="box ">
+            <div class="img-box">
+              <img src="images/s1.png" alt="">
             </div>
-            <p>
-              Words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks </p>
-            <a href="">
-              Read More
-            </a>
-          </div>
-        </div>
-        <div class="col-md-6 ">
-          <div class="img-box">
-            <img src="images/about-img.png" alt="">
-          </div>
-        </div>
+            <div class="detail-box">
+              <h4>
+                Shared Hosting
+              </h4>
+              <p>
+                Generators on the Internet tend to repeat predefined chunks as necessary
+              </p>
+              <a href="">
+                Read More
+                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
 
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4">
+          <div class="box ">
+            <div class="img-box">
+              <img src="images/s2.png" alt="">
+            </div>
+            <div class="detail-box">
+              <h4>
+                Dedicated Hosting
+              </h4>
+              <p>
+                Generators on the Internet tend to repeat predefined chunks as necessary
+              </p>
+              <a href="">
+                Read More
+                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4 ">
+          <div class="box ">
+            <div class="img-box">
+              <img src="images/s3.png" alt="">
+            </div>
+            <div class="detail-box">
+              <h4>
+                Cloud Hosting
+              </h4>
+              <p>
+                Generators on the Internet tend to repeat predefined chunks as necessary
+              </p>
+              <a href="">
+                Read More
+                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4">
+          <div class="box ">
+            <div class="img-box">
+              <img src="images/s4.png" alt="">
+            </div>
+            <div class="detail-box">
+              <h4>
+                VPS Hosting
+              </h4>
+              <p>
+                Generators on the Internet tend to repeat predefined chunks as necessary
+              </p>
+              <a href="">
+                Read More
+                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4">
+          <div class="box ">
+            <div class="img-box">
+              <img src="images/s5.png" alt="">
+            </div>
+            <div class="detail-box">
+              <h4>
+                Wordpress Hosting
+              </h4>
+              <p>
+                Generators on the Internet tend to repeat predefined chunks as necessary
+              </p>
+              <a href="">
+                Read More
+                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4">
+          <div class="box ">
+            <div class="img-box">
+              <img src="images/s6.png" alt="">
+            </div>
+            <div class="detail-box">
+              <h4>
+                Domain Name
+              </h4>
+              <p>
+                Generators on the Internet tend to repeat predefined chunks as necessary
+              </p>
+              <a href="">
+                Read More
+                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
 
-  <!-- end about section -->
+  <!-- end service section -->
+
 
   <!-- info section -->
 
@@ -127,11 +235,11 @@
                 <img src="images/nav-bullet.png" alt="">
                 Home
               </a>
-              <a class="active" href="about.html">
+              <a class="" href="about.html">
                 <img src="images/nav-bullet.png" alt="">
                 About
               </a>
-              <a class="" href="service.html">
+              <a class="active" href="service.html">
                 <img src="images/nav-bullet.png" alt="">
                 Services
               </a>
