--- a/app/views/About.ejs
+++ b/app/views/About.ejs
@@ -146,14 +146,7 @@
 
 
   <!-- footer section -->
-  <footer class="footer_section">
-    <div class="container">
-      <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
-      </p>
-    </div>
-  </footer>
+  <% include partials/footer.ejs %>
   <!-- footer section -->
 
   <!-- jQery -->
