updated "about" page

--- a/app/views/About.ejs
+++ b/app/views/About.ejs
@@ -20,11 +20,11 @@
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-                About Us
+                Security Is A No Choice
               </h2>
             </div>
             <p>
-              Words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks </p>
+              This project allows us not only to have modern storage, chat, development and project management services, but also to have them securely stored on a local server. </p>
             <a href="">
               Read More
             </a>
@@ -41,6 +41,37 @@
   </section>
 
   <!-- end about section -->
+
+  <!-- server section -->
+
+  <section class="server_section">
+    <div class="container ">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="img-box">
+            <img src="images/server-img.jpg" alt="">
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="detail-box">
+            <div class="heading_container">
+              <h2>
+                All in One
+              </h2>
+              <p>
+                All applications are seamlessly interconnected under a single username and password, with data securely stored in a unified storage system. This enhances simplicity and ensures a user-friendly experience for streamlined usage
+              </p>
+            </div>
+            <a href="">
+              Read More
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- end server section -->
 
   <!-- info section -->
   <% include partials/info.ejs %>
