--- a/app/views/partials/head.ejs
+++ b/app/views/partials/head.ejs
@@ -10,7 +10,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
   
-    <title>Hostit</title>
+    <title><%= page_name_ejs%> - FipaCloud</title>
   
   
     <!-- bootstrap core css -->
