--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -26,21 +26,15 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/contact">Contact Us</a>
+              </li><li class="nav-item">
+                <a class="nav-link" href="/Login">Login</a>
               </li>
             </ul>
-            <div class="quote_btn-container">
-              <form class="form-inline">
-                <button class="btn   nav_search-btn" type="submit">
-                  <i class="fa fa-search" aria-hidden="true"></i>
-                </button>
-              </form>
-              <a href="">
-                <i class="fa fa-phone" aria-hidden="true"></i>
-                <span>
-                  COUCOU ICI IL Y AURA LE PFP
-                </span>
+            <li class="nav-item">
+              <a href="/profile">
+                <img  class="nav-link" src="../images/<%= name %>.jpg">
               </a>
-            </div>
+            </li>
           </div>
         </nav>
       </div>
