--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -24,6 +24,7 @@
                             <input type="email" placeholder="Email" required />
                             <input type="password" placeholder="Password" required />
                             <input class="login_button" type="submit" value="Login" style="display: none;" />
+                            <p>Not an account yet? <a href="/register">Register</a></p>
                             <div class="btn_box" >
                                 <button onclick="document.getElementById('login_button').click();">LOGIN</button>
                             </div>
