--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -20,10 +20,11 @@
             <div class="row">
                 <div class="col-md-8 col-lg-6 mx-auto">
                     <div class="form_container">
-                        <form action="">
-                            <input type="email" placeholder="Email" required />
-                            <input type="password" placeholder="Password" required />
-                            <input class="login_button" type="submit" value="Login" style="display: none;" />
+                        <form action="/login" method="post">
+                            <p id="AccountNotFound"></p>
+                            <input id="email" name="email" type="email" placeholder="Email" required />
+                            <input id="password" name="password" type="password" placeholder="Password" required />
+                            <input class="login_button" type="submit" value="submit" style="display: none;" />
                             <p>Not an account yet? <a href="/register">Register</a></p>
                             <div class="btn_box" >
                                 <button onclick="document.getElementById('login_button').click();">LOGIN</button>
