--- a/app/views/service.ejs
+++ b/app/views/service.ejs
@@ -95,7 +95,7 @@
               <p>
                 Generators on the Internet tend to repeat predefined chunks as necessary
               </p>
-              <a href="localhost:3000">
+              <a href="/vscode">
                 Read More
                 <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
 
