adding CAS for nexgcloud

--- a/app/views/Services.ejs
+++ b/app/views/Services.ejs
@@ -51,7 +51,7 @@
                            <div class="u-container-style u-layout-cell u-opacity u-opacity-10 u-palette-1-base u-radius u-shape-round u-size-20 u-layout-cell-5" data-href="http://localhost:8080" data-target="_blank">
                               <div class="u-border-1 u-border-palette-5-dark-3 u-container-layout u-container-layout-5">
                                  <img class="u-image u-image-default u-preserve-proportions u-image-5" src="images/cloud.png" alt="" data-image-width="512" data-image-height="512">
-                                 <p class="u-align-center u-text u-text-5">FileCloud<br>
+                                 <p class="u-align-center u-text u-text-5">NextCloud<br>
                                  </p>
                               </div>
                            </div>
